--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "request": "^2.88.2",
     "stripe": "^8.77.0"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
