--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "stripe": "^8.77.0"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "start:test": "NODE_ENV=test node app.js",
+    "start:prod": "NODE_ENV=production node app.js"
   }
 }
