--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "author": "",
+  "author": "Steve Carlson",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
